--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Vertical Website</title>
+    <title>The Oceanic Giant Manta Ray - Marine Ecology</title>
     <style>
       .wrapper {
         max-width: 960px;
