add basic nav template

--- a/index.html
+++ b/index.html
@@ -16,8 +16,20 @@
         margin-left: 240px;
       }
     </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:300,400'>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+    <nav>
+        <ul>
+          <li class="active"><a href="">First</a></li>
+          <li><a href="">Second</a></li>
+          <li><a href="">Third</a></li>
+          <li><a href="">Fourth</a></li>
+          <li><a href="">Citations</a></li>
+        </ul>
+    </nav>
     <div class="wrapper">
       <div class="sidebar">
         <!-- Add sidebar content here -->
@@ -27,4 +39,6 @@
       </div>
     </div>
   </body>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="scripts.js"></script>
 </html>
