--- a/appearance/appearance.html
+++ b/appearance/appearance.html
@@ -8,16 +8,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:300,400'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="appearance.css">
   </head>
   <body>
     <nav class="mt-3">
         <ul id="nav-list">
-          <li class="active"><a href="">Introduction</a></li>
-          <li><a href="">Appearance</a></li>
-          <li><a href="">Behavior</a></li>
-          <li><a href="">Survival</a></li>
-          <li><a href="">Citations</a></li>
+          <li><a href="../index.html">Introduction</a></li>
+          <li class="active"><a href="">Appearance</a></li>
+          <li><a href="../behavior/behavior.html">Behavior</a></li>
+          <li><a href="../survival/survival.html">Survival</a></li>
+          <li><a href="../citations/citations.html">Citations</a></li>
         </ul>
     </nav>
     <!-- Find actual categories in readme.md-->
@@ -31,5 +31,5 @@
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-  <script src="scripts.js"></script>
+  <script src="appearance.js"></script>
 </html>
