Added beginning paragraphs to index, appearance, citations

--- a/appearance/appearance.html
+++ b/appearance/appearance.html
@@ -14,7 +14,7 @@
     <nav class="mt-3">
         <ul id="nav-list">
           <li><a href="../index.html">Introduction</a></li>
-          <li class="active"><a href="">Appearance</a></li>
+          <li class="active"><a href="">Anatomy</a></li>
           <li><a href="../behavior/behavior.html">Behavior</a></li>
           <li><a href="../survival/survival.html">Survival</a></li>
           <li><a href="../citations/citations.html">Citations</a></li>
@@ -24,12 +24,38 @@
     <div class="wrapper">
       <div class="main">
         <h1 class="text-light mt-4">The Oceanic Giant Manta Ray</h1>
-        
+        <div class="d-flex justify-content-around">
+          <div>
+            <h4 class="text-light">Anatomy & Appearance</h4>
+            <p class="text-light">
+              The Giant Manta Ray is the largest species of ray with a wingspan of up to 29 feet. 
+              It has a large, diamond-shaped body with wing-like pectoral fins, gill slits along its center, 
+              horn-shaped cephalic fins, and a large mouth. It's very wide but thin, similar to a blanket. 
+              Like many other fish, the Giant Manta Ray is dark on the top (dorsal) side and light on the bottom (ventral) side.
+              Manta rays have distinct spot patterns on their bellies that  can be used as identification. 
+            </p>
+          </div>
+          <div>
+            <img src="anatomy_diagram.jpg" alt="Giant Manta Ray" width="512" height="452">
+            <p class="text-light mx-auto text-center">Anatomy of a Giant Manta Ray <a href="https://www.scribd.com/article/499528554/Manta-Ray-Anatomy" class="link-info link-offset-2">Source</a></p>
+          </div>
+        </div>
+        <h4 class="text-light">Locomotion</h4>
+        <p class="text-light">
+          The Giant Manta Ray swims steadily while traveling in deep water but idly closer to shore. 
+          This allows it to conserve energy in the open sea but filter feed effectively in shallow water. 
+          The Giant Manta Ray needs to swim continuously in order to breathe. 
+        </p>
+        <p class="text-light">
+          The Giant Manta Ray swims by flapping its pectoral fins, which are connected to its body by flexible cartilage. 
+          It can also use its cephalic fins to steer and maneuver. 
+          The Giant Manta Ray can swim at speeds of up to 24 km/h (15 mph).
+        </p>
         <!-- Add main content here -->
       </div>
     </div>
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-  <script src="appearance.js"></script>
+  <script src="../nav.js"></script>
 </html>
