--- a/behavior/behavior.html
+++ b/behavior/behavior.html
@@ -14,7 +14,7 @@
     <nav class="mt-3">
       <ul id="nav-list">
         <li><a href="../index.html">Introduction</a></li>
-        <li><a href="../appearance/appearance.html">Appearance</a></li>
+        <li><a href="../appearance/appearance.html">Anatomy</a></li>
         <li class="active"><a href="">Behavior</a></li>
         <li><a href="../survival/survival.html">Survival</a></li>
         <li><a href="../citations/citations.html">Citations</a></li>
@@ -23,13 +23,12 @@
     <!-- Find actual categories in readme.md-->
     <div class="wrapper">
       <div class="main">
-        <h1 class="text-light mt-4">The Oceanic Giant Manta Ray</h1>
-        
+        <h1 class="text-light mt-4">Behavior</h1>
         <!-- Add main content here -->
       </div>
     </div>
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-  <script src="behavior.js"></script>
+  <script src="../nav.js"></script>
 </html>
