--- a/citations/citations.html
+++ b/citations/citations.html
@@ -14,7 +14,7 @@
     <nav class="mt-3">
       <ul id="nav-list">
         <li><a href="../index.html">Introduction</a></li>
-        <li><a href="../appearance/appearance.html">Appearance</a></li>
+        <li><a href="../appearance/appearance.html">Anatomy</a></li>
         <li><a href="../behavior/behavior.html">Behavior</a></li>
         <li><a href="../survival/survival.html">Survival</a></li>
         <li class="active"><a href="">Citations</a></li>
@@ -23,17 +23,39 @@
     <!-- Find actual categories in readme.md-->
     <div class="wrapper">
       <div class="main">
-        <h1>Citations</h2>
+        <h1 style="text-align: center;">Citations</h2>
+          <hr class = "solid">
             <p>
                 Fisheries, N. (2019, December 5). Giant Manta Ray. NOAA. www.fisheries.noaa.gov/species/giant-manta-ray
-                Graham RT, Witt MJ, Castellanos DW, Remolina F, Maxwell S, Godley BJ, Hawkes LA. Satellite tracking of manta rays highlights challenges to their conservation. PLoS One. 2012;7(5):e36834. doi: 10.1371/journal.pone.0036834. Epub 2012 May 10. PMID: 22590622; PMCID: PMC3349638.
-                Oceana. (2023, June 23). Giant Manta Ray - Oceana. oceana.org/marine-life/giant-manta-ray
+              <br><br>
+                Our government’s National Oceanic and Atmospheric Administration (NOAA) created a page specifically about the
+                manta ray and facts & statistics about it such as useful information about its conservation status, population
+                distribution, appearance, diet, and other miscellaneous facts. Because the website is published by a government administration, the information on the page should have excellent quality.
             </p>
-        <!-- Add main content here -->
+          <hr class = "solid">
+            <p>
+              Graham RT, Witt MJ, Castellanos DW, Remolina F, Maxwell S, Godley BJ, Hawkes LA. Satellite 
+              tracking of manta rays highlights challenges to their conservation. PLoS One. 2012;7(5):e36834. 
+              doi: 10.1371/journal.pone.0036834. Epub 2012 May 10. PMID: 22590622; PMCID: PMC3349638.
+            <br><br>
+              This paper studied and analyzed the movement patterns of giant oceanic manta rays using satellite telemetry. This paper is from 2012 and has some small inconsistencies with newer information
+              (i.e. the manta ray’s conservation status is listed on the paper as “vulnerable”, but it is classified as “endangered” today). However, the research paper still has a great wealth of information about the behavior and movement of manta rays.
+            </p>
+          <hr class = "solid">
+            <p>
+              Oceana. (2023, June 23). Giant Manta Ray - Oceana. oceana.org/marine-life/giant-manta-ray
+              <br><br>
+            </p>
+          <hr class = "solid">
+            <p>
+              How It Works (2021, March 18). https://www.scribd.com/article/499528554/Manta-Ray-Anatomy
+              <br><br>
+            </p>
+          <hr class = "solid">
       </div>
     </div>
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-  <script src="citations.js"></script>
+  <script src="../nav.js"></script>
 </html>
