--- a/index.html
+++ b/index.html
@@ -14,22 +14,38 @@
     <nav class="mt-3">
         <ul id="nav-list">
           <li class="active"><a href="">Introduction</a></li>
-          <li><a href="">Appearance</a></li>
-          <li><a href="">Behavior</a></li>
-          <li><a href="">Survival</a></li>
-          <li><a href="">Citations</a></li>
+          <li><a href="./appearance/appearance.html">Anatomy</a></li>
+          <li><a href="behavior/behavior.html">Behavior</a></li>
+          <li><a href="survival/survival.html">Survival</a></li>
+          <li><a href="citations/citations.html">Citations</a></li>
         </ul>
     </nav>
     <!-- Find actual categories in readme.md-->
     <div class="wrapper">
       <div class="main">
         <h1 class="text-light mt-4">The Oceanic Giant Manta Ray</h1>
-        
+        <div class="d-flex justify-content-around">
+          <div>
+            <h4 class="text-light">Introduction</h4>
+            <p class="text-light">
+              The Giant Oceanic Manta Ray <em class="fst-italic">(Mobula birostris)</em>, 
+              also known as the Giant Manta Ray, is the largest species of manta ray.
+              It's name is derived from the Spanish word for blanket or cloak, "Manta", 
+              and its also known as the devilfish because of its horn-shaped cephalic fins. 
+              Baby rays are called pups, and groups of rays are called squadrons. 
+            </p>
+          </div>
+          <div>
+            <img src="Manta_Ray_Intro.png" alt="Giant Manta Ray" width="512" height="452">
+            <p class="text-light mx-auto text-center">A Giant Manta Ray <a href="https://marinemegafauna.org/news/giant-manta-becomes-the-first-manta-ray-to-be-listed-as-an-endangered-species" class="link-info link-offset-2">Source</a></p>
+          </div>
+        </div>
+        <h4 class="text-light">Classification</h4>
         <!-- Add main content here -->
       </div>
     </div>
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-  <script src="scripts.js"></script>
+  <script src="nav.js"></script>
 </html>
