--- a/survival/survival.html
+++ b/survival/survival.html
@@ -14,7 +14,7 @@
     <nav class="mt-3">
       <ul id="nav-list">
         <li><a href="../index.html">Introduction</a></li>
-        <li><a href="../appearance/appearance.html">Appearance</a></li>
+        <li><a href="../appearance/appearance.html">Anatomy</a></li>
         <li><a href="../behavior/behavior.html">Behavior</a></li>
         <li class="active"><a href="">Survival</a></li>
         <li><a href="../citations/citations.html">Citations</a></li>
@@ -31,5 +31,5 @@
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-  <script src="survival.js"></script>
+  <script src="../nav.js"></script>
 </html>
