--- a/citations/citations.html
+++ b/citations/citations.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>The Oceanic Giant Manta Ray - Marine Ecology</title>
+    <title>The Giant Oceanic Manta Ray - Marine Ecology</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="citations.css">
   </head>
   <body>
+    <h1 class="text-light mt-4" style="text-align: center;">The Giant Oceanic Manta Ray</h1>
     <nav class="mt-3">
       <ul id="nav-list">
         <li><a href="../index.html">Introduction</a></li>
@@ -23,7 +24,7 @@
     <!-- Find actual categories in readme.md-->
     <div class="wrapper">
       <div class="main">
-        <h1 style="text-align: center;">Citations</h2>
+        <h2 style="text-align: center;">Citations</h2>
           <hr class = "solid">
             <p>
                 Fisheries, N. (2019, December 5). Giant Manta Ray. NOAA. www.fisheries.noaa.gov/species/giant-manta-ray
@@ -45,6 +46,9 @@
             <p>
               Oceana. (2023, June 23). Giant Manta Ray - Oceana. oceana.org/marine-life/giant-manta-ray
               <br><br>
+              Oceana.org is a huge nonprofit organization dedicated to pushing for legislative change that benefits oceans. The giant marine ray has been profiled on their marine
+               life encyclopedia, and contains information ranging from miscellaneous facts to their habitat distribution that overall help reinforce many of the facts used on this
+                website. It also cites other official, reputable sources such as the IUCN red list, the NOAA, and the Journal of Ethology.
             </p>
           <hr class = "solid">
             <p>
