--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+    <h1 class="text-light mt-4" style="text-align: center;">The Giant Oceanic Manta Ray</h1>
     <nav class="mt-3">
         <ul id="nav-list">
           <li class="active"><a href="">Introduction</a></li>
@@ -23,10 +24,9 @@
     <!-- Find actual categories in readme.md-->
     <div class="wrapper">
       <div class="main">
-        <h1 class="text-light mt-4">The Oceanic Giant Manta Ray</h1>
         <div class="d-flex justify-content-around">
           <div>
-            <h4 class="text-light">Introduction</h4>
+            <h3 class="text-light">Introduction</h3>
             <p class="text-light">
               The Giant Oceanic Manta Ray <em class="fst-italic">(Mobula birostris)</em>, 
               also known as the Giant Manta Ray, is the largest species of manta ray.
@@ -34,13 +34,14 @@
               and its also known as the devilfish because of its horn-shaped cephalic fins. 
               Baby rays are called pups, and groups of rays are called squadrons. 
             </p>
+            <h3 class="text-light">Classification</h3>
+            <p><!--TODO: ADD CONTENT FOR CLASSIFICATION--></p>
           </div>
           <div>
             <img src="Manta_Ray_Intro.png" alt="Giant Manta Ray" width="512" height="452">
-            <p class="text-light mx-auto text-center">A Giant Manta Ray <a href="https://marinemegafauna.org/news/giant-manta-becomes-the-first-manta-ray-to-be-listed-as-an-endangered-species" class="link-info link-offset-2">Source</a></p>
+            <p class="text-light mx-auto text-center">A Giant Manta Ray <br><a href="https://marinemegafauna.org/news/giant-manta-becomes-the-first-manta-ray-to-be-listed-as-an-endangered-species" class="link-info link-offset-2">Source</a></p>
           </div>
         </div>
-        <h4 class="text-light">Classification</h4>
         <!-- Add main content here -->
       </div>
     </div>
