--- a/appearance/appearance.html
+++ b/appearance/appearance.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>The Oceanic Giant Manta Ray - Marine Ecology</title>
+    <title>The Giant Oceanic Manta Ray - Marine Ecology</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="appearance.css">
   </head>
   <body>
+    <h1 class="text-light mt-4" style="text-align: center;">The Giant Oceanic Manta Ray</h1>
     <nav class="mt-3">
         <ul id="nav-list">
           <li><a href="../index.html">Introduction</a></li>
@@ -23,10 +24,9 @@
     <!-- Find actual categories in readme.md-->
     <div class="wrapper">
       <div class="main">
-        <h1 class="text-light mt-4">The Oceanic Giant Manta Ray</h1>
         <div class="d-flex justify-content-around">
           <div>
-            <h4 class="text-light">Anatomy & Appearance</h4>
+            <h3 class="text-light">Anatomy & Appearance</h3>
             <p class="text-light">
               The Giant Manta Ray is the largest species of ray with a wingspan of up to 29 feet. 
               It has a large, diamond-shaped body with wing-like pectoral fins, gill slits along its center, 
@@ -34,23 +34,23 @@
               Like many other fish, the Giant Manta Ray is dark on the top (dorsal) side and light on the bottom (ventral) side.
               Manta rays have distinct spot patterns on their bellies that  can be used as identification. 
             </p>
+            <h3 class="text-light">Locomotion</h3>
+            <p class="text-light">
+              The Giant Manta Ray swims steadily while traveling in deep water but idly closer to shore. 
+              This allows it to conserve energy in the open sea but filter feed effectively in shallow water. 
+              The Giant Manta Ray needs to swim continuously in order to breathe. 
+            </p>
+            <p class="text-light">
+              The Giant Manta Ray swims by flapping its pectoral fins, which are connected to its body by flexible cartilage. 
+              It can also use its cephalic fins to steer and maneuver. 
+              The Giant Manta Ray can swim at speeds of up to 24 km/h (15 mph).
+            </p>
           </div>
           <div>
             <img src="anatomy_diagram.jpg" alt="Giant Manta Ray" width="512" height="452">
-            <p class="text-light mx-auto text-center">Anatomy of a Giant Manta Ray <a href="https://www.scribd.com/article/499528554/Manta-Ray-Anatomy" class="link-info link-offset-2">Source</a></p>
+            <p class="text-light mx-auto text-center">Anatomy of a Giant Manta Ray <a href="https://www.scribd.com/article/499528554/Manta-Ray-Anatomy" class="link-info link-offset-2"><br>Source</a></p>
           </div>
         </div>
-        <h4 class="text-light">Locomotion</h4>
-        <p class="text-light">
-          The Giant Manta Ray swims steadily while traveling in deep water but idly closer to shore. 
-          This allows it to conserve energy in the open sea but filter feed effectively in shallow water. 
-          The Giant Manta Ray needs to swim continuously in order to breathe. 
-        </p>
-        <p class="text-light">
-          The Giant Manta Ray swims by flapping its pectoral fins, which are connected to its body by flexible cartilage. 
-          It can also use its cephalic fins to steer and maneuver. 
-          The Giant Manta Ray can swim at speeds of up to 24 km/h (15 mph).
-        </p>
         <!-- Add main content here -->
       </div>
     </div>
