--- a/behavior/behavior.html
+++ b/behavior/behavior.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="behavior.css">
   </head>
   <body>
+    <h1 class="text-light mt-4" style="text-align: center;">The Giant Oceanic Manta Ray</h1>
     <nav class="mt-3">
       <ul id="nav-list">
         <li><a href="../index.html">Introduction</a></li>
@@ -23,7 +24,7 @@
     <!-- Find actual categories in readme.md-->
     <div class="wrapper">
       <div class="main">
-        <h1 class="text-light mt-4">Behavior</h1>
+        <h2 class="text-light mt-4">Behavior</h2>
         <!-- Add main content here -->
       </div>
     </div>
