--- a/survival/survival.html
+++ b/survival/survival.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>The Oceanic Giant Manta Ray - Marine Ecology</title>
+    <title>The Giant Oceanic Manta Ray - Marine Ecology</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="survival.css">
   </head>
   <body>
+    <h1 class="text-light mt-4" style="text-align: center;">The Giant Oceanic Manta Ray</h1>
     <nav class="mt-3">
       <ul id="nav-list">
         <li><a href="../index.html">Introduction</a></li>
@@ -23,7 +24,7 @@
     <!-- Find actual categories in readme.md-->
     <div class="wrapper">
       <div class="main">
-        <h1 class="text-light mt-4">The Oceanic Giant Manta Ray</h1>
+        <h2 class="text-light mt-4">Survival</h2>
         
         <!-- Add main content here -->
       </div>
