Added behavior & Citations, finished index

--- a/behavior/behavior.html
+++ b/behavior/behavior.html
@@ -24,8 +24,48 @@
     <!-- Find actual categories in readme.md-->
     <div class="wrapper">
       <div class="main">
-        <h2 class="text-light mt-4">Behavior</h2>
-        <!-- Add main content here -->
+        <h3 class="text-light mt-4">Behavior</h3>
+        <p>
+          Giant Manta Rays tend to be solitary, but they aggregate at cleaning and feeding sites. 
+          They migrate between feeding sites, and can be found at a variety of depths between 10 meters and 1000 meters. 
+          This diving behavior is still studied and may be influenced by season. 
+        </p>
+        <h3>Habitat and Range</h3>
+        <p>
+          The Giant Manta Ray is found worldwide in tropical, subtropical, and temperate bodies of water. 
+          Most commonly found in productive coastal areas to feed on plankton, but is also found offshore. 
+          Additionally, they have also been observed in estuaries, inlets, within bays, and intercoastal waterways. 
+        </p>
+        <img src="Manta_Range.jpg" id="range-img">
+        <p class="text-light mx-auto text-center">Approximate representation of Giant Manta Ray range. <br><a href="https://www.fisheries.noaa.gov/species/giant-manta-ray" class="link-info link-offset-2">Source: NOAA</a></p>
+        <h3>Life Cycle</h3>
+        <p>
+          The eggs of an oceanic manta ray develop inside of the oviduct where they hatch. 
+          After they hatch and develop even further, the mother will finally give birth to the live pups usually in shallow water. 
+          These pups, which resemble smaller versions of adult manta rays, will stay in these shoals for a few years until they completely mature.
+          <br><br><br>
+        </p>
+        <div class="d-flex justify-content-around mb-5">
+          <div>
+            <h3>Diet</h3>
+            <p>
+              Giant Manta Rays are filter feeders that mostly eat zooplankton.  
+              They feed by swimming with their mouths open, and the water flows through their gills and out their gill slits. 
+              The gill rakers filter out the plankton, similar to how whales eat. 
+              They can consume up to 60 pounds of plankton per day, and continuously migrate along productive coastlines. 
+            </p>
+            <p>
+              When feeding, Giant Manta Rays do somersaults or form feeding chains with other rays. 
+            </p>
+          </div>
+          <div>
+            <img src="somersault.png" id="somersault-img">
+            <p class="text-light mx-auto text-center">A Giant Manta Ray doing a somersault<br>
+              <a href="https://www.instagram.com/p/6gLNxAIVXZ/?igshid=MzRlODBiNWFlZA==" class="link-info link-offset-2">Source: Thomas Peschak, National Geographic</a>
+            </p>
+          </div>
+        </div>
+        <br><br><br>        
       </div>
     </div>
   </body>
