--- a/citations/citations.html
+++ b/citations/citations.html
@@ -34,6 +34,7 @@
                 distribution, appearance, diet, and other miscellaneous facts. Because the website is published by a government administration, the information on the page should have excellent quality.
             </p>
           <hr class = "solid">
+          <!--TODO: ADD SPECIFIC INFO ON WHICH FACTS WERE IMPLEMENTED INTO WEBSITE-->
             <p>
               Graham RT, Witt MJ, Castellanos DW, Remolina F, Maxwell S, Godley BJ, Hawkes LA. Satellite 
               tracking of manta rays highlights challenges to their conservation. PLoS One. 2012;7(5):e36834. 
@@ -49,6 +50,28 @@
               Oceana.org is a huge nonprofit organization dedicated to pushing for legislative change that benefits oceans. The giant marine ray has been profiled on their marine
                life encyclopedia, and contains information ranging from miscellaneous facts to their habitat distribution that overall help reinforce many of the facts used on this
                 website. It also cites other official, reputable sources such as the IUCN red list, the NOAA, and the Journal of Ethology.
+            </p>
+          <hr class = "solid">
+            <p>
+              Fish, Frank E., et al. “Kinematics of Swimming of the Manta Ray: Three-dimensional Analysis of Open Water 
+              Maneuverability.” The Journal of Experimental Biology, The Company of Biologists, Jan. 2018, 
+              doi.org/10.1242/jeb.166041.
+              <br><br>
+              This paper published in 2018 analyzes the movement of the manta ray in a 3-dimensional plane to a great depth. 
+              It talks about the specific body parts and methods this species of stingray utilizes in order to perform maneuvers 
+              such as banking and doing barrel rolls. This wealth of information was very helpful for our section about the manta ray’s movement.
+            </p>
+          <hr class = "solid">
+            <p>
+              William T White, Shannon Corrigan, Lei Yang, Aaron C Henderson, Adam L Bazinet, David L Swofford, Gavin J P Naylor, 
+              Phylogeny of the manta and devilrays (Chondrichthyes: mobulidae), with an updated taxonomic arrangement for the family, 
+              Zoological Journal of the Linnean Society, Volume 182, Issue 1, January 2018, Pages 50–75, https://doi.org/10.1093/zoolinnean/zlx018
+              <br><br>
+              When we were researching information about the manta ray, we were quite confused because of the inconsistencies 
+              in the scientific name; some sources referred to it as  “Manta birostris”, while others claimed it was named 
+              “Mobula birostris”. This paper directly indicates that in 2017, biologists merged the two genera because of their 
+              genetic identicality. The new, updated name for the genus is Mobula, which is how M. birostris is referred to in our 
+              website.
             </p>
           <hr class = "solid">
             <p>
