--- a/index.html
+++ b/index.html
@@ -35,12 +35,26 @@
               Baby rays are called pups, and groups of rays are called squadrons. 
             </p>
             <h3 class="text-light">Classification</h3>
-            <p><!--TODO: ADD CONTENT FOR CLASSIFICATION--></p>
+            <p>
+              The Giant Oceanic Manta Ray is a member of the Mobulidae family. 
+              It belongs to the phylum Chordata, class Choindrichtyes, order Rajiformes, family Mobulidae, and genus Mobula. 
+              Reef manta rays<em class="fst-italic">(M. alfredi)</em> and spinetail mobulas <em class="fst-italic">(M. japanica)</em> are also related to the giant oceanic manta ray.
+            </p>
+            <p>
+              A <a class="link-info link-offset-2" href="https://academic.oup.com/zoolinnean/article/182/1/50/3886052?login=false">relatively recent update to the taxonomic arrangement</a> 
+              of the Manta family has now combined genus <em class="fst-italic">Manta</em> with genus <em class="fst-italic">Mobula</em>, 
+              so the Giant Manta Ray is often referred to as <em class="fst-italic">Manta birostris</em> instead of <em class="fst-italic">Mobula birostris</em>.
+            </p>
+            <h3 class="text-light">Fun Facts</h3>
+            <p>
+              Giant manta rays are the biggest rays in the world. Additionally, they can dive more than 1,000 meters underwater and have the largest brain volumes of any fish. When feeding, 
+              Giant Manta Rays will do somersaults when feeding on plankton, and consume up to 60 pounds of plankton per day! 
+            </p>
           </div>
-          <div>
-            <img src="Manta_Ray_Intro.png" alt="Giant Manta Ray" width="512" height="452">
+          <div class="ml-4">
+            <img id="manta-img" src="Manta_Ray_Intro.png" alt="Giant Manta Ray" width="512" height="452">
             <p class="text-light mx-auto text-center">A Giant Manta Ray <br><a href="https://marinemegafauna.org/news/giant-manta-becomes-the-first-manta-ray-to-be-listed-as-an-endangered-species" class="link-info link-offset-2">Source</a></p>
-          </div>
+            <iframe class="mt-5"width="560" height="315" src="https://www.youtube-nocookie.com/embed/oiucIEVchik?si=2RN__G-VxLyVnluC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>          </div>
         </div>
         <!-- Add main content here -->
       </div>
