--- a/survival/survival.html
+++ b/survival/survival.html
@@ -24,9 +24,9 @@
     <!-- Find actual categories in readme.md-->
     <div class="wrapper">
       <div class="main">
-        <h2 class="text-light mt-4">Survival</h2>
+        <h2 class="text-light mt-4" style="text-align: left;">Survival</h2>
         <!-- Add main content here -->
-        
+        <p></p>
       </div>
     </div>
   </body>
