Finished behavior, survival
Need to add favicon

--- a/behavior/behavior.html
+++ b/behavior/behavior.html
@@ -65,7 +65,20 @@
             </p>
           </div>
         </div>
-        <br><br><br>        
+        <br><br><br>  
+        <h3>Life Cycle & Reproduction</h3>
+            <p>
+              The eggs of an oceanic manta ray develop inside of the oviduct where they will also hatch. 
+              After they hatch and develop even further, the mother will finally give birth to the live pups, usually in shallow water. 
+              These pups, which resemble smaller versions of adult manta rays, will stay in these shoals for a few years until they completely mature. 
+              Giant manta rays reproduce very slowly, typically having one pup every 2-3 years. 
+              Sightings of juvenile manta rays are very rare, and their habits are unclear. 
+            </p>
+            <p>
+              Although some have been reported to live up to 45 years, not much is known about their growth and development. 
+              Female manta rays can be distinguished from males by checking for two claspers behind the pelvic fins. 
+              If the claspers are present, the manta ray is male. Female manta rays are slightly larger than males. 
+            </p>
       </div>
     </div>
   </body>
