--- a/survival/survival.html
+++ b/survival/survival.html
@@ -21,12 +21,46 @@
         <li><a href="../citations/citations.html">Citations</a></li>
       </ul>
     </nav>
-    <!-- Find actual categories in readme.md-->
+    <!-- adaptations, defense/offense, enemies, species survival status-->
     <div class="wrapper">
       <div class="main">
-        <h2 class="text-light mt-4" style="text-align: left;">Survival</h2>
-        <!-- Add main content here -->
-        <p></p>
+        <h3 class="mt-4">Adaptations</h3>
+        <p>
+          The large fins of the giant manta ray allow it to effortlessly glide through the water. 
+          Manta rays also have cephalic fins near their mouth that guide food into their mouth when eating. 
+          Because they need to consume large amounts of plankton, they have especially large mouths. 
+          Furthermore, giant manta rays have a flat body, so they are able to swim against the sea bed and in shallow waters to feed. 
+          Giant manta rays have been found feeding at depths less than 10 meters. 
+        </p>
+        <h3>Defense and Offense</h3>
+        <img src="mantaray_free.jpg" class="img">
+        <p class="text-light mx-auto text-center">Giant Manta Rays have large stingers to protect from predators<br><a href="https://www.seaparadise.com/new-study-reveals-more-about-where-giant-manta-rays-go-and-why/" class="link-info link-offset-2">Image Source</a></p>
+        <p>
+          Giant Manta Rays are not aggressive, and are known as "gentle giants of the sea". 
+          Although they have stingers, they rarely harm humans. 
+        </p>
+        <div class="d-flex justify-content-around">
+          <div class="w-50">
+            <h3>Enemies</h3>
+            <p>
+              Giant Manta Rays are preyed upon by sharks, orcas, and humans. 
+              They are also vulnerable to entanglement in fishing nets, and are often caught as bycatch. 
+              Additionally, they are hunted for their gill rakers, which are used in traditional Chinese medicine.
+            </p>
+            <h3>Survival Status</h3>
+            <p>
+              In 2018, NOAA listed Giant Manta Rays as an endangered species. 
+              While the exact population count is unknown, sightings have decreased drastically in the last two decades. 
+              Because they feeds in shallow waters, many Giant Manta Rays are caught in fishing equipment or killed by boats. 
+              Furthermore, giant manta rays often only have one pup at a time and have a long gestation period, so population recovery is slow. 
+              Giant Manta Rays are sometimes hunted intentionally, especially around Asia. 
+            </p>
+          </div>
+          <div>
+            <img src="640px-Tiger_shark.jpg" class="img">
+            <p class="text-light mx-auto text-center">Tiger sharks are one of the main predators of Giant Manta Rays.<br><a href="https://en.wikipedia.org/wiki/Tiger_shark" class="link-info link-offset-2">Image Source</a></p>
+          </div>
+        </div>
       </div>
     </div>
   </body>
