--- a/citations/citations.html
+++ b/citations/citations.html
@@ -29,9 +29,10 @@
             <p>
                 Fisheries, N. (2019, December 5). Giant Manta Ray. NOAA. www.fisheries.noaa.gov/species/giant-manta-ray
               <br><br>
-                Our government’s National Oceanic and Atmospheric Administration (NOAA) created a page specifically about the
-                manta ray and facts & statistics about it such as useful information about its conservation status, population
-                distribution, appearance, diet, and other miscellaneous facts. Because the website is published by a government administration, the information on the page should have excellent quality.
+              Our government’s National Oceanic and Atmospheric Administration (NOAA) created a page specifically about 
+              the manta ray and facts & statistics about it such as useful information about its conservation status, population 
+              distribution, appearance, diet, and other miscellaneous facts to be used throughout the entire website. Because it is 
+              published by a government administration, the information on the page should have excellent quality.
             </p>
           <hr class = "solid">
           <!--TODO: ADD SPECIFIC INFO ON WHICH FACTS WERE IMPLEMENTED INTO WEBSITE-->
@@ -77,6 +78,9 @@
             <p>
               How It Works (2021, March 18). https://www.scribd.com/article/499528554/Manta-Ray-Anatomy
               <br><br>
+              This website contains a large diagram of a manta ray and its full anatomy, including its 
+              organ systems and their functions. The diagram is featured in our “Appearance” tab as one of the images, 
+              and some of the information that comes from this diagram was used to supplement the text in that same tab.
             </p>
           <hr class = "solid">
       </div>
