typo fix and simple media query

--- a/appearance/appearance.html
+++ b/appearance/appearance.html
@@ -24,7 +24,7 @@
     <!-- Find actual categories in readme.md-->
     <div class="wrapper">
       <div class="main">
-        <div class="d-flex justify-content-around">
+        <div class="d-flex justify-content-around" id="f-wrapper">
           <div>
             <h3 class="text-light">Anatomy & Appearance</h3>
             <p class="text-light">
