--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
     <!-- Find actual categories in readme.md-->
     <div class="wrapper">
       <div class="main">
-        <div class="d-flex justify-content-around">
+        <div class="d-flex justify-content-around" id="f-wrapper">
           <div>
             <h3 class="text-light">Introduction</h3>
             <p class="text-light">
               The Giant Oceanic Manta Ray <em class="fst-italic">(Mobula birostris)</em>, 
               also known as the Giant Manta Ray, is the largest species of manta ray.
-              It's name is derived from the Spanish word for blanket or cloak, "Manta", 
-              and its also known as the devilfish because of its horn-shaped cephalic fins. 
+              Its name is derived from the Spanish word for blanket or cloak, "Manta", 
+              and it's also known as the devilfish because of its horn-shaped cephalic fins. 
               Baby rays are called pups, and groups of rays are called squadrons. 
             </p>
             <h3 class="text-light">Classification</h3>
