--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="wrapper">
       <div class="main">
         <div class="d-flex justify-content-around" id="f-wrapper">
-          <div>
+          <div class="w-50">
             <h3 class="text-light">Introduction</h3>
             <p class="text-light">
               The Giant Oceanic Manta Ray <em class="fst-italic">(Mobula birostris)</em>, 
@@ -51,7 +51,7 @@
               Giant Manta Rays will do somersaults when feeding on plankton, and consume up to 60 pounds of plankton per day! 
             </p>
           </div>
-          <div class="ml-4">
+          <div class="ml-4 w-50">
             <img id="manta-img" src="Manta_Ray_Intro.png" alt="Giant Manta Ray" width="512" height="452">
             <p class="text-light mx-auto text-center">A Giant Manta Ray <br><a href="https://marinemegafauna.org/news/giant-manta-becomes-the-first-manta-ray-to-be-listed-as-an-endangered-species" class="link-info link-offset-2">Source</a></p>
             <iframe class="mt-5"width="560" height="315" src="https://www.youtube-nocookie.com/embed/oiucIEVchik?si=2RN__G-VxLyVnluC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>          </div>
